[package]
name = "node-manager"
version = "6.1.5"
edition = "2021"

# No external dependencies — only std.
# This is intentional: every dependency adds to binary size and audit surface.

[profile.release]
opt-level = "z"       # optimise for size, not speed
lto = true            # link-time optimisation strips dead code
codegen-units = 1     # required for full LTO
strip = true          # strip all symbols
panic = "abort"       # smaller panic handler, no unwinding machinery
